--- a/caravan/style.css
+++ b/caravan/style.css
@@ -36,12 +36,26 @@ header.heading {
   width: 100%; /* 横幅いっぱい */
   height: 300px; /* 高さ300px */
   background-color: orange; /* 背景色orange */
+  background-image: url(img/mv.jpg);
+  background-size: cover; /*縦横比を維持したまま背景領域を埋め尽くす*/
+  background-position: center; /*背景画像を中央に配置*/
 }
 
 .main-visual-content {
-  width: 350px; /*横幅350px*/
+  width: 40%; /*横幅40%px*/
   height: 300px; /*親の高さに揃える*/
-  background-color: gold;  /*背景色gold*/
+  background-color: rgba(0,0,0,0.5); /*背景色を半透明の黒にする*/
+  text-align: center; /*文字を中央ぞろえに*/
+  padding-top: 105px; /* 上側の内側余白で垂直方向の位置を調整 */
+}
+
+.main-visual-text {
+  color: #fff; /*文字色を白に変更*/
+}
+
+.main-visual-name {
+  margin-top: 30px;
+  color: #fff;
 }
 
 .main {
