--- a/caravan/style.css
+++ b/caravan/style.css
@@ -60,24 +60,59 @@ header.heading {
 
 .main {
   width: 840px; /* 横幅840px */
-  height: 1400px;
-  background-color: green; /* 背景色green */
   display: flex; /* Flexboxの利用 */
   justify-content: center; /* 子要素の横並び・中央寄せ */
   margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
-   color: #6c6b6b;
+  padding: 70px 0;
 }
 
 .blog{
-  width: 600px;  /*横幅600px*/
-  height: 1400px;  /*高さ600px*/
-  background-color: limegreen; /*背景色limegreen*/
+  width: 540px;
+  margin-right: 30px;
+}
+
+.blog-heading {
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height: 0.6
+}
+
+.blog-box {
+  padding-top: 50px;
+}
+
+.blog-item {
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #f7f7f7; 
+  display: flex;
+  justify-content:flex-start;
+}
+
+.blog-image {
+  height: 180px;
+}
+
+.blog-text {
+  padding: 25px 0 0 30px;
+}
+
+.blog-date {
+  font-size: 12px;
+  display: inline-block;
+}
+
+.category {
+  display:inline-block;
+  padding: 5px 8px;
+  background-color: #acabab;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 11px;
 }
 
 .sidebar {
-  width: 240px; /*横幅240px*/
-  height: 1400px; /*高さ600px*/
-  background-color: palegreen; /*背景色palegreen*/
+ width: 230px;
 }
 
 footer {
