--- a/KADAI-1/kadai-1.css
+++ b/KADAI-1/kadai-1.css
@@ -78,3 +78,31 @@ p {
   background-color: #ff9a4b;
   color: white;
 }
+
+@media screen and (max-width:425px){
+  
+header {
+  width: 100%;
+}
+
+main {
+  width: 100%;
+  display: block;
+}
+
+.box {
+  width: 90%;
+  margin-bottom: 20px;
+}
+
+.box:last-child {
+  margin-bottom: 0;
+}
+
+
+
+footer {
+  width: 100%;
+}
+  
+}
