--- a/KADAI-1/kadai-1.css
+++ b/KADAI-1/kadai-1.css
@@ -14,7 +14,6 @@ footer {
   background-color: #aaaaaa;
   width: 100%;
   height: 50px;
-  margin-top: 50px;
 }
 
 main {
@@ -80,7 +79,7 @@ p {
 }
 
 @media screen and (max-width:425px){
-  
+
 header {
   width: 100%;
 }
@@ -93,6 +92,7 @@ main {
 .box {
   width: 90%;
   margin-bottom: 20px;
+  margin-left: 5%;
 }
 
 .box:last-child {
@@ -104,5 +104,5 @@ main {
 footer {
   width: 100%;
 }
-  
+
 }
