--- a/flex/style.css
+++ b/flex/style.css
@@ -4,10 +4,14 @@
   padding: 10px;
   display: flex;
   justify-content:center;
-  align-items: center;
+  align-items: stretch;
 }
 .flex > div {
   background-color: #fff;
   margin: 5px;
   font-size: 30px;
+}
+
+.flex > div {
+  flex: 2 2 10%;
 }
